initial 26.1 port