@@ -1,28 +1,29 @@
 package com.landmaster.landsutilities.mixin;
 
 import com.landmaster.landsutilities.item.RemoteControlItem;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.player.Player;
+import net.minecraft.core.BlockPos;
+import net.minecraft.world.entity.ContainerUser;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.ContainerOpenersCounter;
-import net.minecraft.world.level.entity.EntityTypeTest;
-import net.minecraft.world.phys.AABB;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
-import org.spongepowered.asm.mixin.injection.Redirect;
+import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import java.util.List;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Mixin(ContainerOpenersCounter.class)
 public class ContainerOpenersCounterMixin {
-    @Redirect(method = "getPlayersWithContainerOpen",
-            at = @At(value = "INVOKE", target = "Lnet/minecraft/world/level/Level;getEntities(Lnet/minecraft/world/level/entity/EntityTypeTest;Lnet/minecraft/world/phys/AABB;Ljava/util/function/Predicate;)Ljava/util/List;"))
-    private List<Player> adjustPlayersWithContainerOpen(Level instance, EntityTypeTest<Entity, Player> entityTypeTest, AABB bounds, Predicate<? super Player> predicate) {
+    @Inject(method = "getEntitiesWithContainerOpen(Lnet/minecraft/world/level/Level;Lnet/minecraft/core/BlockPos;)Ljava/util/List;",
+            at = @At("RETURN"),
+            cancellable = true)
+    private void getEntitiesWithContainerOpen(Level level, BlockPos pos, CallbackInfoReturnable<List<ContainerUser>> cir) {
         if (!RemoteControlItem.MENU_TO_REMOTE_RANGE.isEmpty()) {
-            return instance.players().stream().filter(predicate).collect(Collectors.toList());
+            cir.setReturnValue(Stream.concat(cir.getReturnValue().stream(), RemoteControlItem.MENU_TO_REMOTE_RANGE.values().stream()
+                    .map(RemoteControlItem.MenuData::player))
+                    .distinct()
+                    .toList());
         }
-        return instance.getEntities(entityTypeTest, bounds, predicate);
     }
 }
